cf_analysis_results/checkerframework_results/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8.txt
../../../../datasets/june2020_dataset/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8/src/org/eclipse/recommenders/jayes/util/Pair.java:53: error: (return) $$ 2 $$ @MustCallUnknown String $$ @MustCall String $$ ( 1257, 1287 ) $$ incompatible types in return.
        return "Pair{" + o1 + ", " + o2 + "}";
                                        ^
  type of expression: @MustCallUnknown String
  method return type: @MustCall String
../../../../datasets/june2020_dataset/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8/src/com/alibaba/DataRead.java:21: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1053 $$ java.io.FileReader $$ possible exceptional exit due to br.readLine() with exception type java.io.IOException $$ ( 505, 565 ) $$ @MustCall method close may not have been invoked on temp-var-1053 or any of its aliases.
            br = new BufferedReader(new FileReader("E:\\workspace\\alibaba\\t_alibaba_data.csv"));
                                    ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to br.readLine() with exception type java.io.IOException
2 errors
